//
// Aspia Project
// Copyright (C) 2016-2026 Dmitry Chapyshev <dmitry@aspia.ru>
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package proto.switch_session;

message SwitchSession
{
    uint32 dummy      = 1; // Always set to 1.
    uint32 session_id = 2;
}

message Session
{
    uint32 session_id   = 1;
    string session_name = 2;
    string domain_name  = 3;
    string user_name    = 4;
    bool is_console     = 5;
    bool is_locked      = 6;
    bool is_active      = 7;
}

message SessionList
{
    repeated Session session  = 1;
    uint32 current_session_id = 2;
}

message SessionListRequest
{
    uint32 dummy = 1; // Always set to 1.
}

message HostToClient
{
    SessionList session_list = 1;
}

message ClientToHost
{
    SessionListRequest session_list_request = 1;
    SwitchSession switch_session            = 2;
}



